[package]
authors = [
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Jonas Platte <jplatte@posteo.de>",
]
categories = ["api-bindings"]
description = "Resource identifiers for Matrix."
documentation = "https://docs.rs/ruma-identifiers"
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-identifiers"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.17.4"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["serde"]
serde = ["serde1", "ruma-identifiers-validation/serde"]

[dependencies]
either = { version = "1.5.3", optional = true }
rand = { version = "0.7.3", optional = true }
ruma-identifiers-macros = { version = "=0.17.4", path = "../ruma-identifiers-macros" }
ruma-identifiers-validation = { version = "0.1.1", path = "../ruma-identifiers-validation" }
serde1 = { package = "serde", version = "1.0.114", optional = true, features = ["derive"] }
strum = { version = "0.19.2", features = ["derive"] }

[dev-dependencies]
matches = "0.1.8"
serde_json = "1.0.57"
trybuild = "1.0.31"
