[package]
authors = [
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Jonas Platte <jplatte@posteo.de>",
]
categories = ["api-bindings"]
description = "Resource identifiers for Matrix."
documentation = "https://docs.rs/ruma-identifiers"
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-identifiers"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.18.0-alpha.1"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["serde"]
serde = ["ruma-serde", "serde1"]

[dependencies]
either = { version = "1.6.1", optional = true }
paste = "1.0.4"
rand = { version = "0.8.0", optional = true }
ruma-identifiers-macros = { version = "=0.18.0-alpha.1", path = "../ruma-identifiers-macros" }
ruma-identifiers-validation = { version = "0.2.0", path = "../ruma-identifiers-validation", default-features = false }
ruma-serde = { version = "0.3.0", path = "../ruma-serde", optional = true }
ruma-serde-macros = { version = "0.3.0", path = "../ruma-serde-macros" }
# Renamed so we can have a serde feature.
serde1 = { package = "serde", version = "1.0.118", optional = true, features = ["derive"] }

[dev-dependencies]
matches = "0.1.8"
serde_json = "1.0.60"
trybuild = "1.0.38"
