[package]
name = "ruma-identity-service-api"
version = "0.0.1"
authors = ["Jonas Platte <jplatte@posteo.de>"]
description = "Types for the endpoints in the Matrix identity service API."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
edition = "2018"

[dependencies]
ruma-api = { version = "=0.17.0-alpha.2", path = "../ruma-api" }
ruma-common = { version = "0.4.0", path = "../ruma-common" }
ruma-identifiers = { version = "0.19.0", path = "../ruma-identifiers" }
ruma-serde = { version = "0.3.1", path = "../ruma-serde" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
js_int = { version = "0.2.0", features = ["serde"] }

[features]
unstable-exhaustive-types = []
client = []
server = []
