[package]
name = "ruma-push-gateway-api"
version = "0.0.0"
authors = ["Jonas Platte <jplatte@posteo.de>"]
description = "Types for the endpoints in the Matrix push gateway API."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
edition = "2018"

[dependencies]
js_int = "0.1.9"
ruma-api = { version = "=0.17.0-alpha.1", path = "../ruma-api" }
ruma-common = { version = "0.2.0", path = "../ruma-common" }
ruma-events = { version = "=0.22.0-alpha.1", path = "../ruma-events" }
ruma-identifiers = { version = "0.17.4", path = "../ruma-identifiers" }
ruma-serde = { version = "0.2.3", path = "../ruma-serde" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
strum = { version = "0.19.2", features = ["derive"] }

[dev-dependencies]
http = "0.2.1"
maplit = "1.0.2"