[package]
name = "ruma-push-gateway-api"
version = "0.0.1"
authors = ["Jonas Platte <jplatte@posteo.de>"]
description = "Types for the endpoints in the Matrix push gateway API."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
edition = "2018"

[dependencies]
js_int = { version = "0.2.0", features = ["serde"] }
ruma-api = { version = "=0.17.0-alpha.2", path = "../ruma-api" }
ruma-common = { version = "=0.3.0-alpha.1", path = "../ruma-common" }
ruma-events = { version = "0.22.0-alpha.1", path = "../ruma-events" }
ruma-identifiers = { version = "=0.18.0-alpha.1", path = "../ruma-identifiers" }
ruma-serde = { version = "0.3.0", path = "../ruma-serde" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

[features]
unstable-exhaustive-types = []
