[package]
authors = ["Jonas Platte <jplatte@posteo.de>"]
categories = ["api-bindings", "web-programming"]
description = "Procedural macros for ruma-serde."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-serde-macros"
repository = "https://github.com/ruma/ruma"
version = "0.3.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "0.1.5"
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "1.0.55", features = ["full", "extra-traits"] }
