[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
categories = ["api-bindings", "cryptography"]
description = "Digital signatures according to the Matrix specification."
documentation = "https://docs.rs/ruma-signatures"
edition = "2018"
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma", "cryptography"]
license = "MIT"
name = "ruma-signatures"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.6.0-dev.1"

[dependencies]
base64 = "0.12.3"
ring = "0.16.15"
ruma-identifiers = { version = "0.17.4", path = "../ruma-identifiers" }
ruma-serde = { version = "0.2.3", path = "../ruma-serde" }
serde_json = "1.0.57"
untrusted = "0.7.1"
