[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
categories = ["api-bindings", "cryptography"]
description = "Digital signatures according to the Matrix specification."
documentation = "https://docs.rs/ruma-signatures"
edition = "2018"
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma", "cryptography"]
license = "MIT"
name = "ruma-signatures"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.6.0-dev.1"

[dependencies]
base64 = "0.13.0"
ring = "0.16.19"
ruma-identifiers = { version = "=0.18.0-alpha.1", path = "../ruma-identifiers" }
ruma-serde = { version = "0.3.0", path = "../ruma-serde" }
serde_json = "1.0.60"
untrusted = "0.7.1"
