[package]
name = "ruma"
authors = ["Jonas Platte <jplatte@posteo.de>"]
categories = ["api-bindings", "web-programming"]
keywords = ["matrix", "chat", "messaging", "ruma"]
description = "Types and traits for working with the Matrix protocol."
documentation = "https://docs.rs/ruma-client-api"
homepage = "https://www.ruma.io/"
repository = "https://github.com/ruma/ruma"
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2018"

[features]
either = ["ruma-identifiers/either"]
rand = ["ruma-identifiers/rand"]
unstable-pre-spec = ["ruma-client-api/unstable-pre-spec"]
unstable-synapse-quirks = ["ruma-client-api/unstable-synapse-quirks"]

appservice-api = ["ruma-api", "ruma-appservice-api", "ruma-events"]
client-api = ["ruma-api", "ruma-client-api", "ruma-events"]
federation-api = ["ruma-api", "ruma-federation-api", "ruma-signatures"]

[dependencies]
ruma-common = { version = "0.1.3", path = "../ruma-common" }
ruma-identifiers = { version = "0.17.0", path = "../ruma-identifiers", features = ["serde"] }

ruma-events = { version = "0.21.3", path = "../ruma-events", optional = true }
ruma-signatures = { version = "0.6.0-dev.1", path = "../ruma-signatures", optional = true }

ruma-api = { version = "0.16.1", path = "../ruma-api", optional = true }
ruma-appservice-api = { version = "0.1.0", path = "../ruma-appservice-api", optional = true }
ruma-client-api = { version = "0.9.0", path = "../ruma-client-api", optional = true }
ruma-federation-api = { version = "0.0.2", path = "../ruma-federation-api", optional = true }
