[package]
name = "ruma"
authors = ["Jonas Platte <jplatte@posteo.de>"]
categories = ["api-bindings", "web-programming"]
keywords = ["matrix", "chat", "messaging", "ruma"]
description = "Types and traits for working with the Matrix protocol."
documentation = "https://docs.rs/ruma-client-api"
homepage = "https://www.ruma.io/"
repository = "https://github.com/ruma/ruma"
readme = "README.md"
license = "MIT"
version = "0.0.1"
edition = "2018"

[dependencies]
assign = "1.1.0"
js_int = "0.2.0"

ruma-common = { version = "0.2.0", path = "../ruma-common" }
ruma-identifiers = { version = "0.17.4", path = "../ruma-identifiers", features = ["serde"] }
ruma-serde = { version = "0.2.3", path = "../ruma-serde" }

ruma-events = { version = "=0.22.0-alpha.1", path = "../ruma-events", optional = true }
ruma-signatures = { version = "0.6.0-dev.1", path = "../ruma-signatures", optional = true }

ruma-api = { version = "=0.17.0-alpha.1", path = "../ruma-api", optional = true }
ruma-appservice-api = { version = "=0.2.0-alpha.1", path = "../ruma-appservice-api", optional = true }
ruma-client-api = { version = "=0.10.0-alpha.1", path = "../ruma-client-api", optional = true }
ruma-federation-api = { version = "0.0.3", path = "../ruma-federation-api", optional = true }
ruma-identity-service-api = { version = "0.0.0", path = "../ruma-identity-service-api", optional = true }
ruma-push-gateway-api = { version = "0.0.0", path = "../ruma-push-gateway-api", optional = true }

[dev-dependencies]
serde = { version = "1.0.117", features = ["derive"] }

[features]
either = ["ruma-identifiers/either"]
rand = ["ruma-identifiers/rand"]

events = ["ruma-events"]
signatures = ["ruma-signatures"]

appservice-api = ["ruma-api", "ruma-appservice-api", "events"]
client-api = ["ruma-api", "ruma-client-api", "events"]
federation-api = ["ruma-api", "ruma-federation-api", "signatures"]
identity-service-api = ["ruma-api", "ruma-identity-service-api"]
push-gateway-api = ["ruma-api", "ruma-push-gateway-api"]

unstable-exhaustive-types = [
  "ruma-events/unstable-exhaustive-types",
  "ruma-appservice-api/unstable-exhaustive-types",
  "ruma-client-api/unstable-exhaustive-types",
  "ruma-federation-api/unstable-exhaustive-types",
  "ruma-common/unstable-exhaustive-types",
]
unstable-pre-spec = ["ruma-client-api/unstable-pre-spec", "ruma-events/unstable-pre-spec", "ruma-federation-api/unstable-pre-spec"]
unstable-synapse-quirks = [
  "ruma-client-api/unstable-synapse-quirks",
  "ruma-common/unstable-synapse-quirks",
  "ruma-events/unstable-synapse-quirks",
]
