[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["dep:isahc", "dep:semver", "dep:toml_edit"]

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
isahc = { version = "1.7.0", features = ["json"], optional = true }
semver = { version = "1.0.6", features = ["serde"], optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
toml = "0.5.8"
toml_edit = { version = "0.15.0", optional = true }
xshell = "0.1.17"
