[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["dep:isahc", "dep:semver", "dep:toml_edit"]

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
isahc = { version = "1.7.0", features = ["json"], optional = true }
semver = { version = "1.0.6", features = ["serde"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.5.8"
toml_edit = { version = "0.17.1", optional = true }
xshell = "0.1.17"
