[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["dep:semver", "dep:toml_edit"]

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
html5gum = "0.5.2"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
semver = { version = "1.0.6", features = ["serde"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { version = "0.8.2", default-features = false, features = ["parse"] }
toml_edit = { version = "0.20.2", optional = true }
xshell = "0.1.17"
