[package]
categories = ["api-bindings", "web-programming"]
description = "Types for the endpoints in the Matrix application service API."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-appservice-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.7.0"
edition = "2021"
rust-version = "1.64"

[package.metadata.docs.rs]
all-features = true

[features]
unstable-exhaustive-types = []
client = []
server = []
unstable-msc3202 = []

[dependencies]
js_int = { version = "0.2.2", features = ["serde"] }
ruma-common = { version = "0.10.5", path = "../ruma-common", features = ["api", "events"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

[dev-dependencies]
assert_matches = "1.5.0"
serde_yaml = "0.8.17"
