[package]
categories = ["api-bindings", "web-programming"]
description = "Types for the endpoints in the Matrix application service API."
homepage = "https://ruma.dev/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-appservice-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.10.0"
edition = "2021"
rust-version = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[features]
client = []
server = []

unstable-exhaustive-types = []
unstable-msc2409 = []
unstable-msc3202 = []

[dependencies]
js_int = { workspace = true, features = ["serde"] }
ruma-common = { workspace = true, features = ["api"] }
ruma-events = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_matches2 = { workspace = true }
serde_yaml = "0.9.14"
