[package]
categories = ["api-bindings", "web-programming"]
description = "Types for the endpoints in the Matrix client-server API."
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-client-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.16.2"
edition = "2021"
rust-version = "1.64"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# OutgoingRequest and IncomingResponse implementations
client = []
# IncomingRequest and OutgoingResponse implementations
server = []

# Allow some mandatory fields in requests / responses to be missing, defaulting
# them to an empty string in deserialization.
compat-empty-string-null = []

# Unset avatars by sending an empty string, same as what Element Web does, c.f.
# https://github.com/matrix-org/matrix-spec/issues/378#issuecomment-1055831264
compat-unset-avatar = []

# Always serialize the threepids response field in `get_3pids::v3::Response`,
# even if its value is an empty string.
compat-get-3pids = []

unstable-exhaustive-types = ["ruma-common/unstable-exhaustive-types"]
unstable-msc2246 = []
unstable-msc2666 = []
unstable-msc2448 = []
unstable-msc2654 = []
unstable-msc2677 = []
unstable-msc2965 = []
unstable-msc2967 = []
unstable-msc3488 = []
unstable-msc3575 = []

[dependencies]
assign = { workspace = true }
bytes = "1.0.1"
http = { workspace = true }
js_int = { workspace = true, features = ["serde"] }
js_option = "0.1.1"
maplit = { workspace = true }
ruma-common = { workspace = true, features = ["api", "events"] }
serde = { workspace = true }
serde_html_form = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
