[package]
categories = ["api-bindings", "web-programming"]
description = "A Matrix client library."
edition = "2018"
homepage = "https://www.ruma.io/"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-client"
readme = "README.md"
repository = "https://github.com/ruma/ruma"
version = "0.8.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
client-api = ["ruma-client-api"]

# HTTP clients
hyper-native-tls = ["hyper", "hyper-tls"]
hyper-rustls = ["hyper", "hyper-rustls-crate"]
isahc = ["isahc-crate", "futures-lite"]
reqwest-native-tls = ["reqwest", "reqwest/native-tls"]
reqwest-native-tls-alpn = ["reqwest", "reqwest/native-tls-alpn"]
reqwest-native-tls-vendored = ["reqwest", "reqwest/native-tls-vendored"]
reqwest-rustls-manual-roots = ["reqwest", "reqwest/rustls-tls-manual-roots"]
reqwest-rustls-webpki-roots = ["reqwest", "reqwest/rustls-tls-webpki-roots"]
reqwest-rustls-native-roots = ["reqwest", "reqwest/rustls-tls-native-roots"]

[dependencies]
assign = "1.1.1"
async-stream = "0.3.0"
async-trait = "0.1.50"
bytes = "1.0.1"
futures-core = "0.3.8"
futures-lite = { version = "1.11.3", optional = true }
http = "0.2.2"
hyper = { version = "0.14.2", optional = true, features = ["client", "http1", "http2", "tcp"] }
hyper-rustls-crate = { package = "hyper-rustls", version = "0.22.1", optional = true, default-features = false }
hyper-tls = { version = "0.5.0", optional = true }
isahc-crate = { package = "isahc", version = "1.3.1", optional = true }
reqwest = { version = "0.11.4", optional = true, default-features = false }
ruma-client-api = { version = "0.13.0", path = "../ruma-client-api", optional = true, features = ["client"] }
ruma-common = { version = "0.8.0", path = "../ruma-common", features = ["api"] }
ruma-serde = { version = "0.6.0", path = "../ruma-serde" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
tracing = { version = "0.1.30", default-features = false, features = ["std"] }

[dev-dependencies]
ruma-client-api = { version = "0.13.0", path = "../ruma-client-api", features = ["client"] }
tokio-stream = "0.1.8"
